# softbank-autologin

./: CMakeLists.txt  CMakeSettings.json  README.md  account.cpp  account.hpp  main.cpp  ssid.hpp  ssid_mac.mm  ssid_noimpl.cpp  ssid_win32.cpp  utils.hpp
